# Sentiment-Dynamics-Sentiment-Shifts-in-Cryptocurrency-Communities

./: .env.example  QUICK_START.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_system.py
collectors/: base_collector.py  collector_config.py  reddit_collector.py  run_reddit_collector.py  run_twitter_collector.py  run_webhook_collector.py  twitter_collector.py  webhook_collector.py
config/: kafka_topics.yaml  spark_config.yaml
data/minio/.minio.sys/: format.json
main/collectors/: crypto_price_scraper.py  historical_crypto_price_scraper.py  reddit_scraper.py  sites_to_scrape.txt
main/collectors/bronze_output/: reddit_bronze_20251217_213152.json
main/collectors/output/: crypto_price_sample.json  reddit_bronze_20251217_212402.json
main/dashboards/: grafana.json
main/grafana/dashboards/: business-dashboard.json  kafka-dashboard.json  spark-dashboard.json
main/monitoring/: prometheus.yml  spark-jmx.yml
main/monitoring/jmx/: kafka-jmx.yml
main/scripts/: init_lakehouse.sh  start_listeners.sh
main/spark_jobs/: bronze_feed.py  bronze_streaming.py  silver_embedding_job.py  silver_feed.py
main/utils/: alter_silver.py  bronze_crypto_feed.py  gold_feed.py  gold_migrate_to_postgres.py  materialized_view.sql  silver_feed.py  standalone_inference.py
models/: model_server.py
scripts/: init_system.py
spark_metrics_sample/: bronze.txt  gold.txt  silver.txt
storage/schemas/: bronze_schema.py  gold_schema.py  silver_schema.py
streaming/: preprocess_job.py  sentiment_job.py
utils/: __init__.py  spark_utils.py  text_utils.py
(+35 files in other folders)
